Added removePassage and getBrokenLinks to Story class, and tests

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,9 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
+        <configuration>
+          <mainClass>ntnu.no.idatg2001.Main</mainClass>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
