--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
         <version>3.0.0-M6</version>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
   </build>
 
 </project>
