Basic gui with language suopport and music has been added

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,4 +1,5 @@
-name=Settings
-audioLevel=Audio Level
-language=Language
-isMusicMuted=Music Muted
+#Settings
+#Tue Apr 04 14:49:38 CEST 2023
+languageSelection=Norv\u00E9gien
+isMuted=true
+volumeSliderValue=30.0
