--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+          <debug>true</debug>
           <compilerArgs>
             <arg>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED</arg>
           </compilerArgs>
