Made changes to how the menu addapts to diffrent resulutions

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Tue Apr 04 14:49:38 CEST 2023
-languageSelection=Norv\u00E9gien
-isMuted=true
-volumeSliderValue=30.0
+#Tue Apr 04 22:31:52 CEST 2023
+languageSelection=English
+isMuted=false
+volumeSliderValue=46.45502645502646
