Fixed resulution, added round corners and tried doing some refactoring in how the gui is coded

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Tue Apr 04 22:31:52 CEST 2023
-languageSelection=English
+#Wed Apr 05 01:23:45 CEST 2023
+languageSelection=Norv\u00E9gien
 isMuted=false
-volumeSliderValue=46.45502645502646
+volumeSliderValue=8.994704957992315
