--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed Apr 05 01:23:45 CEST 2023
-languageSelection=Norv\u00E9gien
+#Thu Apr 06 00:36:41 CEST 2023
+languageSelection=Engelsk
 isMuted=false
-volumeSliderValue=8.994704957992315
+volumeSliderValue=35.44973544973544
