added createStoryView and made it so you can go from another Scene to another in the same window, but i get a nullpointer bug, so need to be fixed in next commit

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Thu Apr 06 00:36:41 CEST 2023
+#Sat Apr 08 13:44:49 CEST 2023
 languageSelection=Engelsk
-isMuted=false
-volumeSliderValue=35.44973544973544
+isMuted=true
+volumeSliderValue=100.0
