--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,11 @@ stages:
   - test
   - package 
 
+cache:
+    paths:
+        - m2/repository
+        - target
+
 build_job:
     stage: build
     tags:
