--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,43 @@
 variables:
-    MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
+  MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
 
 image: maven:3.8.5-openjdk-17
 
 stages:
   - build
   - test
-  - package 
+  - package
 
 cache:
-    paths:
-        - .m2/repository
-        - target
+  paths:
+    - .m2/repository
+    - target
 
 build_job:
-    stage: build
-    tags:
-       - docker
+  stage: build
+  tags:
+    - docker
 
-    script:
-        - echo "Maven compile started"
-        - "mvn compile -B"
+  script:
+    - echo "Maven compile started"
+    - "mvn compile -B"
+
 
 test_job:
-    stage: test
-    tags:
-        - docker
+  stage: test
+  tags:
+    - docker
 
-    script:
-        - echo "Maven test Started"
-        - "mvn test -B"
+  script: 
+    - echo "maven test started"
+    - "mvn clean test -B"
+
 
 package_job:
-    stage: package
-    tags:
-        - docker 
+  stage: package
+  tags:
+    - docker
 
-    script:
-        - echo "Maven package started"
-        - "mvn package -B"
-
-
+  script:
+    - echo "Maven packaging started"
+    - "mvn package -B"
