--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Sun Apr 09 22:23:18 CEST 2023
-languageSelection=Engelsk
-isMuted=true
+#Thu Apr 20 12:39:04 CEST 2023
+languageSelection=Norv\u00E9gien
+isMuted=false
 volumeSliderValue=100.0
