refactor of logic in frontend with MVC design in mind, this is a big commit with all changes.

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Mon May 01 15:46:46 CEST 2023
-languageSelection=Norv\u00E9gien
-isMuted=false
-volumeSliderValue=100.0
+#Wed May 03 20:43:40 CEST 2023
+languageSelection=English
+isMuted=true
+volumeSliderValue=30.0
