--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>javafx-web</artifactId>
       <version>17.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jfxtras</groupId>
+      <artifactId>jfxtras-common</artifactId>
+      <version>17-r1</version>
+    </dependency>
   </dependencies>
 
   <build>
