--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed May 03 20:43:40 CEST 2023
-languageSelection=English
-isMuted=true
-volumeSliderValue=30.0
+#Wed May 03 20:54:02 CEST 2023
+languageSelection=Norwegian
+isMuted=false
+volumeSliderValue=100.0
