--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed May 03 20:54:02 CEST 2023
-languageSelection=Norwegian
-isMuted=false
+#Wed May 03 21:05:50 CEST 2023
+languageSelection=Norsk
+isMuted=true
 volumeSliderValue=100.0
