--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
       <version>17.0.2</version>
     </dependency>
     <dependency>
+      <groupId>org.jfxtras</groupId>
+      <artifactId>jfxtras-common</artifactId>
+      <version>17-r1</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
       <version>10.15.2.0</version>
