Fixed MusicPlayer bug in settings

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed May 03 20:54:02 CEST 2023
-languageSelection=Norwegian
+#Wed May 03 21:25:40 CEST 2023
 isMuted=false
-volumeSliderValue=100.0
+languageSelection=Norsk
+volumeSliderValue=12.698414212181452
