Edited english language pack

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed May 03 21:25:40 CEST 2023
+#Thu May 04 13:00:30 CEST 2023
 isMuted=false
-languageSelection=Norsk
-volumeSliderValue=12.698414212181452
+languageSelection=Engelsk
+volumeSliderValue=48.67724867724866
