added a new view for createStory

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed May 03 21:05:50 CEST 2023
-languageSelection=Norsk
+#Thu May 04 12:57:19 CEST 2023
+languageSelection=Engelsk
 isMuted=true
 volumeSliderValue=100.0
