added german and doing some refactoring in bundels and frontend view

--- a/src/main/resources/settings/languagecodes.properties
+++ b/src/main/resources/settings/languagecodes.properties
@@ -2,13 +2,22 @@
 english=en
 french=fr
 norwegian=no
+german=de
 
 # Norwegian
 engelsk=en
 norsk=no
 fransk=fr
+tysk=de
 
 # French
 anglais=en
 norvégien=no
 français=fr
+allemand=de
+
+# German
+englisch=en
+norwegisch=no
+französisch=fr
+deutsch=de
