--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,13 @@ stages:
   - build
   - test
   - package
+  - deploy
 
 cache:
   paths:
     - .m2/repository
     - target
+    - javadoc
 
 build_job:
   stage: build
@@ -21,7 +23,12 @@ build_job:
   script:
     - echo "Maven compile started"
     - "mvn compile -B"
+    - "mvn javadoc:javadoc -B"
     - echo $SOME_VARIABLE
+  artifacts:
+    paths:
+      -target
+      -javadoc
 
 
 test_job:
@@ -44,3 +51,15 @@ package_job:
     - echo "Maven packaging started"
     - "mvn package -B"
     - echo $SOME_VARIABLE
+
+deploy:
+  stage: deploy
+  script:
+    - mv public public_old || true
+    - mkdir public
+    - mv javadoc/* public/
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
