--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,14 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M6</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <outputDirectory>${project.basedir}/javadoc</outputDirectory>
+        </configuration>
+      </plugin>
     </plugins>
     <resources>
       <resource>
