--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,4 +78,24 @@ maven-site:
       - public
   only:
     - master
+    - 
+pages:
+  stage: deploy
+  when: manual
+  script:
+    - mvn clean package
+    - mvn javadoc:javadoc
+    - ls target/site/
+    - ls target/site/apidocs/
+    - mkdir .public
+    - cd .public
+    - mkdir apidocs
+    - cd ..
+    - cp -rf target/site/apidocs/* .public/apidocs/
+    - cp -rf target/jacoco/* .public
+    - mv -f .public public
+  artifacts:
+    paths:
+      - public
+
 
