--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,10 @@ package_job:
 
 pages:
   stage: deploy
+  tags:
+    - docker
   when: manual
+  
   script:
     - mvn clean package
     - mvn javadoc:javadoc
