--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,7 @@ javadoc_job:
 
   script:
     - echo "Generating Javadoc"
+    - export ACCESS_TOKEN=$CI_CD  # Set the access token as an environment variable
     - "mvn javadoc:javadoc"
   artifacts:
     paths:
