--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.3.1</version>
         <configuration>
-          <reportOutputDirectory>${project.basedir}/javadoc</reportOutputDirectory>
+          <outputDirectory>${project.basedir}/javadoc</outputDirectory>
         </configuration>
       </plugin>
       <plugin>
