--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Wed May 10 11:53:34 CEST 2023
-languageSelection=Norwegian
+#Thu May 11 19:04:04 CEST 2023
+languageSelection=Norsk
 isMuted=true
 volumeSliderValue=100.0
