Rebase for local

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Thu May 11 19:04:04 CEST 2023
-languageSelection=Norsk
+#Sat May 13 18:34:16 CEST 2023
+languageSelection=Norv\u00E9gien
 isMuted=true
 volumeSliderValue=100.0
