--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Sat May 13 18:34:16 CEST 2023
-languageSelection=Norv\u00E9gien
+#Sat May 13 21:11:11 CEST 2023
+languageSelection=Norsk
 isMuted=true
-volumeSliderValue=100.0
+volumeSliderValue=12.698412698412698
