made it so the user can delete selected item, and removed bug for selecting item always selected

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Sat May 13 21:11:11 CEST 2023
-languageSelection=Norsk
+#Sun May 14 19:08:19 CEST 2023
+languageSelection=English
 isMuted=true
 volumeSliderValue=12.698412698412698
