--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,16 @@
       <artifactId>eclipselink</artifactId>
       <version>4.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>guru.nidi</groupId>
+      <artifactId>graphviz-java</artifactId>
+      <version>0.16.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
   </dependencies>
 
   <build>
