--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Thu May 18 20:13:02 CEST 2023
-languageSelection=Fransk
+#Fri May 19 17:46:48 CEST 2023
+languageSelection=Norv\u00E9gien
 isMuted=true
 volumeSliderValue=12.698412698412698
