--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Fri May 19 17:46:48 CEST 2023
-languageSelection=Norv\u00E9gien
+#Fri May 19 20:14:41 CEST 2023
+languageSelection=English
 isMuted=true
-volumeSliderValue=12.698412698412698
+volumeSliderValue=94.70899521358429
