working on a restart game, finish game and

--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,5 +1,5 @@
 #Settings
-#Sun May 21 04:11:49 CEST 2023
-languageSelection=Anglais
+#Mon May 22 04:32:56 CEST 2023
+languageSelection=English
 isMuted=true
-volumeSliderValue=94.70899521358429
+volumeSliderValue=100.0
